--- a/refactoring/docker-compose.yml
+++ b/refactoring/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   iptables-service:
     build: backend
@@ -9,7 +7,30 @@ services:
       - ${EXPOSED_PORT}:${EXPOSED_PORT}
     volumes:
       - /lib/modules:/lib/modules:ro
-      - ./ssh_keys/:/etc/ssh/keys/  # Monta la chiave privata nel container
+      - ./ssh_keys/:/etc/ssh/keys/
     environment:
       - SSH_PRIVATE_KEY_PATH=/etc/ssh/keys/ctf_proxy_rsa_key
       - EXPOSED_PORT=${EXPOSED_PORT}
+    networks:
+      ctf_proxy_network:
+        ipv4_address: 172.30.0.3
+
+  nginx:
+    build: "nginx"
+    hostname: nginx
+    container_name: nginx
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - iptables-service
+    restart: unless-stopped
+    networks:
+      ctf_proxy_network:
+        ipv4_address: 172.30.0.2
+
+networks:
+  ctf_proxy_network:
+    driver: bridge
+    ipam:
+      config:
+        - subnet: 172.30.0.0/24
