--- a/refactoring/nginx/nginx.conf
+++ b/refactoring/nginx/nginx.conf
@@ -1,9 +1,21 @@
 worker_processes auto;
 
-events { 
-    worker_connections 1024; 
-}
+        events { 
+            worker_connections 1024; 
+        }
 
-stream {
-
-}
+        stream {
+            
+            upstream string_upstream {
+                server 172.30.0.3:9000 fail_timeout=20s max_fails=1;
+                server 198.18.0.42:9000 backup;
+            }
+            server {
+                proxy_connect_timeout 5s;
+                listen 9000;
+                listen [::]:9000;
+                proxy_pass string_upstream;
+            }
+        
+        }
+        
